2014-05-05  Corinna Vinschen  <vinschen@redhat.com>

	* libc/include/stdio.h: Declare various C99 printf/scanf functions for
	C++11, too.

2014-04-22  Richard Earnshaw  <rearnsha@arm.com>

	* libc/machine/arm/strcmp-arm-tiny.S: New file.
	* libc/machine/arm/strcmp-armv4.S: New file.
	* libc/machine/arm/strcmp-armv4t.S: New file.
	* libc/machine/arm/strcmp-armv6.S: New file.
	* libc/machine/arm/strcmp-armv7.S: New file.
	* libc/machine/arm/strcmp-armv7m.S: New file.
	* libc/machine/arm/strcmp.S: Replace with wrapper for various
	implementations.
	* libc/machine/arm/Makefile.am (strcmp.o, strcmp.obj): Add
	dependencies.
	* libc/machine/arm/Makefile.in: Regenerated.

2014-04-14  Sebastian Huber  <sebastian.huber@embedded-brains.de>

	* libc/sys/rtems/sys/cpuset.h (CPU_SET_S): Add const qualifier.
	(CPU_SET): Likewise.

2014-04-09  DJ Delorie  <dj@redhat.com>

	* libc/machine/rl78/setjmp.S: Add RL78/G10 support.

2014-04-04  Ashish Kapania  <akapania@ti.com>

	* configure.host (sys_dir, newlib_cflags): Set sys_dir to tirtos and use
	-D__DYNAMIC_REENT__ and -DMALLOC_PROVIDED compiler options for TIRTOS
	target.
	* libc/stdio/local.h (_STDIO_CLOSE_PER_REENT_STD_STREAMS): Change #ifdef
	to not define this macro when __tirtos__ is defined.
	* libc/sys/tirtos : Add support for TIRTOS.
	* libc/sys/tirtos/Makefile.am, libc/sys/tirtos/lock.c: New files.
	* libc/sys/tirtos/configure.in, libc/sys/tirtos/include/sys/lock.h: Ditto.

2014-03-27  Richard Earnshaw  <rearnsha@arm.com>

	* libc/machine/arm/acle-compat.h: New file.
	* libc/machine/arm/arm_asm.h: Use it.

2014-03-21  Maciej W. Rozycki  <macro@codesourcery.com>

	* libc/stdlib/gd_qnan.h (f_QNAN, d_QNAN0, d_QNAN1): Add MIPS
	versions.
	(ld_QNAN0, ld_QNAN1, ld_QNAN2, ld_QNAN3): Don't define for MIPS.
	(ldus_QNAN0, ldus_QNAN1, ldus_QNAN2, ldus_QNAN3, ldus_QNAN4):
	Likewise.
	* libc/stdlib/ldtoa.c (nan113, nan64, nan53, nan24): Add MIPS
	versions.
	(enan): Handle legacy MIPS payloads.